--- a/MSMarcoQA/EDA_qa.ipynb
+++ b/MSMarcoQA/EDA_qa.ipynb
@@ -55,32 +55,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:33:48.846390Z",
-     "start_time": "2025-04-05T08:33:48.842059Z"
+     "end_time": "2025-04-05T09:10:50.987685Z",
+     "start_time": "2025-04-05T09:10:50.385207Z"
     }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:33:49.177888Z",
-     "start_time": "2025-04-05T08:33:49.174307Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "data_split = 'dev'",
-   "id": "ea336dd398be049f",
-   "outputs": [],
-   "execution_count": 17
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-05T08:39:22.448964Z",
-     "start_time": "2025-04-05T08:39:22.210031Z"
+     "end_time": "2025-04-05T09:11:00.462362Z",
+     "start_time": "2025-04-05T09:11:00.203686Z"
     }
    },
    "cell_type": "code",
@@ -116,13 +103,13 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:39:23.534336Z",
-     "start_time": "2025-04-05T08:39:23.525911Z"
+     "end_time": "2025-04-05T09:11:02.005736Z",
+     "start_time": "2025-04-05T09:11:01.928218Z"
     }
    },
    "cell_type": "code",
@@ -225,18 +212,18 @@
        "</div>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:40:14.576133Z",
-     "start_time": "2025-04-05T08:40:14.569560Z"
+     "end_time": "2025-04-05T09:11:02.856147Z",
+     "start_time": "2025-04-05T09:11:02.821822Z"
     }
    },
    "cell_type": "code",
@@ -250,26 +237,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pandas(Index=2519, query_id=12744, question='what are the penalties of closing my hsa', answer=\"['There are no tax penalties of closing Health Savings Accounts.']\", query_type='DESCRIPTION', passages=\"You will have to pay taxes plus a 10% 20% (I'm pretty sure that's right) fee for withdrawing the money from your HSA. There are no tax penalties only if you pay for medical expenses FROM the account, which is no longer possible since it is closed.. Health Savings Accounts (HSAs) A Health Savings Account (HSA) is a tax-exempt trust or custodial account you set up with a qualified HSA trustee to pay or reimburse certain medical expenses you incur. You must be an eligible individual to qualify for an HSA. No permission or authorization from the IRS is necessary to establish an HSA.\", passage_length=104)\n",
-      "Pandas(Index=10249, query_id=23050, question='what is weather in invergordon scotland in july', answer=\"['The average maximum daytime temperature in Invergordon in February is a cold 5°C (41°F), while the average minimum night-time temperature is a very cold -1°C (30°F). You can expect on average 3 hours of sunshine a day in Invergordon during February.']\", query_type='DESCRIPTION', passages='Invergordon weather in February. The average maximum daytime temperature in Invergordon in February is a cold 5°C (41°F), while the average minimum night-time temperature is a very cold -1°C (30°F). You can expect on average 3 hours of sunshine a day in Invergordon during February.', passage_length=45)\n",
-      "Pandas(Index=18710, query_id=36287, question='define softening water', answer=\"['Water softening is a process through which calcium, magnesium and certain other metal cations in hard water are removed.']\", query_type='DESCRIPTION', passages='Water softening is a process through which calcium, magnesium and certain other metal cations in hard water are removed. Water softening is an important process, because it can extend the lifespan of household appliances and pipelines, as well as improve function and lifespan of solar heating systems, air conditioning units and many other water-based applications.', passage_length=55)\n",
-      "Pandas(Index=41884, query_id=76443, question='when did old yeller come out', answer=\"['1957']\", query_type='NUMERIC', passages='33,306 pages on this wiki. Old Yeller is a 1957 Walt Disney Productions film starring Tommy Kirk, Dorothy McGuire, and Beverly Washburn, and directed by Robert Stevenson. It is about a boy and a stray dog in post-Civil War Texas. It is based upon the 1956 Newbery Honor-winning book of the same name by Fred Gipson.', passage_length=56)\n",
-      "Pandas(Index=23089, query_id=44252, question='how to test keystrokes per hour', answer=\"['1 You can calculate the number of keystrokes per hour you type if you know your word-per-minute typing speed. 2 Take an online typing test (see Resources). 3 Repeat the test at a different typing test site. Average your WPM results by adding them together and then dividing by the number of tests you took.']\", query_type='DESCRIPTION', passages='March 31, 2015. 1  You can calculate the number of keystrokes per hour you type if you know your word-per-minute typing speed. 2  Take an online typing test (see Resources). 3  Repeat the test at a different typing test site.  Average your WPM results by adding them together and then dividing by the number of tests you took.', passage_length=58)\n",
-      "Pandas(Index=38187, query_id=7023, question='is social security paid in on employee deductible', answer=\"['No, employees may not deduct any payroll tax withheld from your income.']\", query_type='DESCRIPTION', passages='The IRS collects the Social Security payroll tax on behalf of the Social Security Administration. IRS rules do not allow the employer or the employee to waive the tax or change its rate, which as of 2012 was 4.2 percent for employees and 6.2 percent for employers. You may not deduct any payroll tax withheld from your income. Your eligibility for Social Security benefits depends on a system of work credits, which are earned by drawing income and paying in to the Social Security system.', passage_length=85)\n",
-      "Pandas(Index=49864, query_id=89879, question='why did the gestapo go after the communists', answer=\"['The Gestapo’s main purpose was to hunt out those considered a threat to Nazi Germany. By the time World War Two started these included Jews, Communists, Jehovah Witnesses, homosexuals – basically anyone who was thought to challenge the hegemony of the Nazi Party within Germany.']\", query_type='DESCRIPTION', passages='The Gestapo’s main purpose was to hunt out those considered a threat to Nazi Germany. By the time World War Two started these included Jews, Communists, Jehovah Witnesses, homosexuals – basically anyone who was thought to challenge the hegemony of the Nazi Party within Germany.After the outbreak of World War Two, the work of the Gestapo covered Occupied Europe where it had two main tasks.oering wanted to have control over a unified police force of Germany. Himmler had an identical aspiration. Goering set up the Central Security Office of the Third Reich in buildings on Prinz Albrechtstrasse in Berlin. He made one of his proteges, Protégés Rudolf, diels head of the secret. police', passage_length=113)\n",
-      "Pandas(Index=3481, query_id=14005, question='what county is the city of oneida ny in', answer=\"['Oneida is a city in Madison County located east of Canastota, New York, United States.']\", query_type='LOCATION', passages='Oneida is a city in Madison County located east of Canastota, New York, United States. The population was 10,987 at the 2000 census. The city, like both the adjacent county and the nearby silver and china maker, takes its name from the Oneida tribe. Some members of the tribe are still concentrated in the municipal vicinity. Oneida is located at 43°5′6″N 75°39′12″W / 43.085°N 75.65333°W / 43.085; -75.65333 (43.084961, -75.653375).', passage_length=70)\n",
-      "Pandas(Index=18251, query_id=35367, question='does water release energy as it turns to ice', answer=\"['Yes, water release energy as it turns to ice.']\", query_type='DESCRIPTION', passages='So, to convert water into ice, you have to remove energy, and you do this by removing the energy from the water in the form of heat. Your freezer is a lot colder than the water, so the water gives up its heat energy to the air in your freezer by warming up that air. Then the freezer tries to maintain its cold temperature by pumping the heat into your kitchen.', passage_length=71)\n",
-      "Pandas(Index=39761, query_id=72813, question='what show stars corey matthews', answer=\"['A fictional character in the US television series Boy Meets World (1993–2000) and its sequel Girl Meets World (2014–present).']\", query_type='ENTITY', passages='Cornelius A. Cory Matthews is a fictional character in the US television series Boy Meets World (1993–2000) and its sequel Girl Meets World (2014–present), portrayed by Ben Savage.', passage_length=28)\n"
+      "Pandas(Index=49989, query_id=90078, question='what tool to use to take off lambs tails', answer=\"['Elastrator tool is used to take off lambs tails.']\", query_type='ENTITY', passages='The easiest and most common method of tail docking is to apply a rubber ring (or band) to the tail using an elastrator tool. Banding is a bloodless method of tail docking. The band cuts off the blood supply to the tail, causing the tail to fall off in 7 to 10 days.')\n",
+      "Pandas(Index=48658, query_id=87881, question='who is michael bisping', answer=\"['He is an english mixed martial artist.']\", query_type='PERSON', passages='Michael Bisping. Michael Bisping (/ˈbɪspɪŋ/, BIS-ping; born 28 February 1979) is an English mixed martial artist. He fights in the Ultimate Fighting Championship (UFC), and is the current UFC Middleweight Champion. He is a former Cage Rage Light Heavyweight Champion, and The Ultimate Fighter 3 Light Heavyweight Tournament winner.')\n",
+      "Pandas(Index=33357, query_id=61880, question='what could cause lung pain', answer=\"['Pleurisy, infections, smoking.']\", query_type='DESCRIPTION', passages='There are many possible conditions that may cause pain in your lungs, but some of the more common ones include: 1  Pleurisy: Pleurisy refers to an inflammation of the tissues lining the lungs (the pleura). 2  Infections: Infections ranging from pneumonia to bronchitis to a lung abscess can cause this type of pain. Pain caused by COPD. Chronic obstructive pulmonary disease, or COPD, is a disease of the lung in which breathing is made extremely difficult. Smoking is the major cause of this disease; causing inflammation of the lung as well as the destruction of air sacs within the lung. Secondhand smoke when severe and exposure to certain fumes or gases are also attributable. Symptoms include coughing and lung pain as the individual attempts to breathe or cough.')\n",
+      "Pandas(Index=2658, query_id=12946, question='what are two rivers in ancient rome', answer=\"['Two major European rivers the Rhine and the Danube are in Ancient Rome.']\", query_type='ENTITY', passages='What are the major rivers in ancient rome? The river in the city of Rome is the Tiber. Regarding the Roman Empire, two major European rivers the Rhine and the Danube formed much of its frontiers in Europe.')\n",
+      "Pandas(Index=10146, query_id=22928, question='what is tyvek, building', answer=\"['Tyvek is a brand of flashspun high-density polyethylene fibers, a synthetic material.']\", query_type='DESCRIPTION', passages='Tyvek house wrap. Tyvek /taɪˈvɛk/ is a brand of flashspun high-density polyethylene fibers, a synthetic material; the name is a registered trademark of DuPont. It is often seen used as housewrap, a synthetic material used to protect buildings during construction. The material is very strong; it is difficult to tear but can easily be cut with scissors or a knife. Water vapor can pass through Tyvek, but liquid water cannot. All of these properties make Tyvek useful in a variety of applications.')\n",
+      "Pandas(Index=44316, query_id=80562, question='what is the record for sneezing in a row', answer=\"['978th day in a row.']\", query_type='NUMERIC', passages=\"The world record for sneezing is held by Donna Griffiths from Worstershire, UK, who sneezed for 978 days in a row. Thank you. The world record for sneezing is held by Donna Griffiths from the UK, who sneezed for 978 days in a row, stopping on 9/16/83. CHA! I'm unable to find any records, but there were a couple videos of cows sneezing & a children's book,The Day the Cow Sneezed..\")\n",
+      "Pandas(Index=51996, query_id=93455, question='what is the bacterium called that causes cholera', answer=\"['Vibrio cholerae.']\", query_type='ENTITY', passages='Causes. A bacterium called Vibrio cholerae causes cholera infection. However, the deadly effects of the disease are the result of a potent toxin called CTX that the bacteria produce in the small intestine.CTX binds to the intestinal walls, where it interferes with the normal flow of sodium and chloride.holera bacteria occur naturally in coastal waters, where they attach to tiny crustaceans called copepods. The cholera bacteria travel with their hosts, spreading worldwide as the crustaceans follow their food source — certain types of algae and plankton that grow explosively when water temperatures rise.')\n",
+      "Pandas(Index=14018, query_id=28035, question='definition of chakra', answer=\"['Chakras are defined as any of several points of physical or spiritual energy in the human body according to yoga philosophy.']\", query_type='DESCRIPTION', passages='Definition of chakra. : any of several points of physical or spiritual energy in the human body according to yoga philosophy.')\n",
+      "Pandas(Index=48212, query_id=87129, question='when did sally ride first go to sp', answer=\"['June 18, 1983.']\", query_type='NUMERIC', passages=\"Sally Ride in space in 1984. Space Frontiers/Getty Images. Today would have been Sally Ride's 64th birthday. Ride, who became the first American woman in space on June 18, 1983, died of pancreatic cancer in 2012. But she remains an iconic figure in science — in part due to her milestone but also because of her influential work on behalf of science education for kids.\")\n",
+      "Pandas(Index=18633, query_id=36123, question='central palm beach chamber of commerce', answer=\"['It is a regional chamber covering over 15 municipalities within Palm Beach County, including Wellington, Royal Palm Beach, West Palm Beach, Lake Worth, Greenacres, and many more.']\", query_type='DESCRIPTION', passages='Central Palm Beach County Chamber of Commerce. The Central Palm Beach County Chamber of Commerce is a regional chamber covering over 15 municipalities within Palm Beach County, including Wellington, Royal Palm Beach, West Palm Beach, Lake Worth, Greenacres, and many more!')\n"
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:39:25.010763Z",
-     "start_time": "2025-04-05T08:39:24.998236Z"
+     "end_time": "2025-04-05T09:11:03.045721Z",
+     "start_time": "2025-04-05T09:11:03.034652Z"
     }
    },
    "cell_type": "code",
@@ -289,13 +276,13 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:39:25.792811Z",
-     "start_time": "2025-04-05T08:39:25.713616Z"
+     "end_time": "2025-04-05T09:11:03.276865Z",
+     "start_time": "2025-04-05T09:11:03.202533Z"
     }
    },
    "cell_type": "code",
@@ -317,13 +304,13 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:39:26.417377Z",
-     "start_time": "2025-04-05T08:39:26.286769Z"
+     "end_time": "2025-04-05T09:11:03.854805Z",
+     "start_time": "2025-04-05T09:11:03.725090Z"
     }
    },
    "cell_type": "code",
@@ -354,13 +341,13 @@
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:39:26.791194Z",
-     "start_time": "2025-04-05T08:39:26.776178Z"
+     "end_time": "2025-04-05T09:11:04.433901Z",
+     "start_time": "2025-04-05T09:11:04.420229Z"
     }
    },
    "cell_type": "code",
@@ -383,13 +370,13 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T08:39:27.309464Z",
-     "start_time": "2025-04-05T08:39:27.298118Z"
+     "end_time": "2025-04-05T09:11:05.096158Z",
+     "start_time": "2025-04-05T09:11:05.082591Z"
     }
    },
    "cell_type": "code",
@@ -412,13 +399,13 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T08:37:48.072008Z",
-     "start_time": "2025-03-28T08:37:48.066778Z"
+     "end_time": "2025-04-05T09:11:06.092324Z",
+     "start_time": "2025-04-05T09:11:06.090215Z"
     }
    },
    "cell_type": "code",
@@ -426,6 +413,14 @@
    "id": "5ce79bdc30f6bff4",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "39515b945d5c2985"
   }
  ],
  "metadata": {
